--- a/frontend/src/components/app.css
+++ b/frontend/src/components/app.css
@@ -77,3 +77,27 @@
     border: none;
   }
   
+
+  /* admin dashboard */
+
+  table {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+th, td {
+    border: 1px solid #ddd;
+    padding: 8px;
+}
+
+th {
+    background-color: #f4f4f4;
+}
+
+tr:nth-child(even) {
+    background-color: #f2f2f2;
+}
+
+tr:hover {
+    background-color: #ddd;
+}
