--- a/frontend/src/components/app.css
+++ b/frontend/src/components/app.css
@@ -85,19 +85,15 @@
     border-collapse: collapse;
 }
 
+table, th, td {
+    border: 1px solid black;
+}
+
 th, td {
-    border: 1px solid #ddd;
-    padding: 8px;
+    padding: 10px;
+    text-align: left;
 }
 
 th {
-    background-color: #f4f4f4;
-}
-
-tr:nth-child(even) {
     background-color: #f2f2f2;
-}
-
-tr:hover {
-    background-color: #ddd;
 }
