--- a/frontend/src/components/app.css
+++ b/frontend/src/components/app.css
@@ -83,6 +83,7 @@
   table {
     width: 100%;
     border-collapse: collapse;
+    margin-top: 1rem;
 }
 
 table, th, td {
@@ -95,5 +96,31 @@ th, td {
 }
 
 th {
-    background-color: #f2f2f2;
+    background-color: #aae676;
+}
+
+/* user dashboard */
+
+
+.head{
+  text-align: center;
+  background-color: rgb(185, 183, 183);
+  padding: 1rem 0;
+  text-transform: uppercase;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.btn-log{
+  text-align: right;
+  margin: 2rem ;
+  position: relative;
+  bottom: 5.5rem;
+}
+.logout{
+  padding: 0.5rem 1rem;
+  font-size: 1.2rem;
+  border-radius: 50px;
+  background-color: black;
+  color: white;
+  text-transform: uppercase;
+  border: none;
 }
